syntax = "proto3";

message CheckboxDescription {
    bool is_selected = 1;
}
